Change cursor to box shadow to fix spacing issues

--- a/src/components/pages/PracticeYourself/Paragraph/Paragraph.css
+++ b/src/components/pages/PracticeYourself/Paragraph/Paragraph.css
@@ -1,7 +1,24 @@
 @keyframes cursorBlink {
   50% {
-    border-left: 1px solid rgba(255, 255, 255, 0);
+    box-shadow: -1px 0 0 0 rgba(255, 255, 255, 0);
   }
+}
+
+.active-word {
+  text-decoration: underline;
+}
+
+.active-char {
+  animation: cursorBlink 1s infinite;
+  box-shadow: -1px 0 0 0 white;
+}
+
+.correct {
+  color: green;
+}
+
+.incorrect {
+  color: red;
 }
 
 #paragraph p {
@@ -12,22 +29,4 @@
 
 #paragraph span {
   background-color: transparent;
-}
-
-.active-word {
-  text-decoration: underline;
-}
-
-.active-char {
-  animation: cursorBlink 1s infinite;
-  border-left: 1px solid white;
-  margin-left: -1px;
-}
-
-.correct {
-  color: green;
-}
-
-.incorrect {
-  color: red;
 }
